--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 server.port=8082
+spring.application.name=reloader.admin
+
 application.name=reloader-management
 application-description=User Management Service
 application-version=1.0
+
+
 application.licence.url=https://github.com/jakesvdw77/address-capture
 
 management.endpoints.web.exposure.include=health,info,prometheus
@@ -15,6 +19,8 @@ keycloak.resource=reloader-mananagement
 keycloak.public-client=true
 keycloak.cors = true
 keycloak.enabled = true
+admin.keycloak.user=admin
+admin.keycloak.pwd=admin
 
 keycloak.security-constraints[0].authRoles[0]=app-user
 keycloak.security-constraints[0].securityCollections[0].patterns[0]=/profile/*
@@ -22,3 +28,7 @@ keycloak.principal-attribute=preferred_username
 
 reloader.keycloak.admin=jakesvdw77@gmail.com
 authentication.keycloak.url=http://localhost:8080/auth/realms/ultimate-reloader-realm/protocol/openid-connect/token
+
+
+elk.log.topic=elk
+kafka.bootstrap.server=localhost:9092
